--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <fragment
+        <com.google.android.gms.maps.MapView
             android:id="@+id/map"
+            android:contentDescription="test"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/activity_main"
-            tools:layout_editor_absoluteX="-27dp"
-            tools:layout_editor_absoluteY="48dp">
+            tools:layout="@layout/activity_main">
+        </com.google.android.gms.maps.MapView>
 
-        </fragment>
-    </View>
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
