--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:id="@+id/view"
-        android:layout_width="344dp"
-        android:layout_height="623dp"
+        android:layout_width="400dp"
+        android:layout_height="728dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,11 +20,7 @@
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/activity_main"
-            tools:layout_editor_absoluteX="-27dp"
-            tools:layout_editor_absoluteY="48dp">
-        </androidx.fragment.app.FragmentContainerView>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <Button
